kubernetes/base/bankapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-app
  namespace: bankapp-namespace

spec:
  replicas: 2

  selector:
    matchLabels:
      app: bank-app

  template:
    metadata:
      labels:
        app: bank-app

    spec:
      containers:
        - name: bank-app
          image: zorochan/bank-app:12
          ports:
            - containerPort: 8080

          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10


          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
