kubernetes/base/bankapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  namespace: bankapp-namespace
  
spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bank-service
                port:
                  number: 80
